--- a/web/src/main/webResources/WEB-INF/config.properties
+++ b/web/src/main/webResources/WEB-INF/config.properties
@@ -1,5 +1,8 @@
-language.default=${language.default}
-language.forceDefault=${language.forceDefault}
+#language.default=${language.default}
+#language.forceDefault=${language.forceDefault}
+
+language.default=eng
+language.forceDefault=true
 
 
 # Define using CRON expression when watchlist notifier is triggered (Default 4AM)
