--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "schemas/iso19115-3.2018"]
 	path = schemas/iso19115-3.2018
 	url = https://github.com/metadata101/iso19115-3.2018
+[submodule "iso19115-3.2018"]
+	path = iso19115-3.2018
+	url = https://github.com/metadata101/iso19115-3.2018.git
