--- a/web/src/main/webResources/WEB-INF/config-db/jdbc.properties
+++ b/web/src/main/webResources/WEB-INF/config-db/jdbc.properties
@@ -21,18 +21,17 @@
 # Rome - Italy. email: geonetwork@osgeo.org
 #
 
-jdbc.username=${db.username}
-jdbc.password=${db.password}
-jdbc.database=${db.name}
-jdbc.host=${db.host}
-jdbc.port=${db.port}
-jdbc.connectionProperties=${db.connectionProperties}
+jdbc.username=geonetwork
+jdbc.password=B2ZrxESlCVqJj99x0Q8l
+jdbc.database=geonetwork_3_8
+jdbc.host=10.8.244.28
+jdbc.port=5432
 jdbc.basic.removeAbandoned=true
 jdbc.basic.removeAbandonedTimeout=300
 jdbc.basic.logAbandoned=true
-jdbc.basic.maxActive=${db.pool.maxActive}
-jdbc.basic.maxIdle=${db.pool.maxIdle}
-jdbc.basic.initialSize=${db.pool.initialSize}
+jdbc.basic.maxActive=30
+jdbc.basic.maxIdle=10
+jdbc.basic.initialSize=10
 jdbc.basic.maxWait=500
 jdbc.basic.testOnBorrow=true
 jdbc.basic.timeBetweenEvictionRunsMillis=1000
